--- a/Daily report/13-08.md
+++ b/Daily report/13-08.md
@@ -1,4 +1,9 @@
-
+- [Load balancer](#load-balancer)
+- [Api gateway](#api-gateway)
+- [Storage](#storage)
+- [Sơ đồ logic thủ công mẫu](#sơ-đồ-logic-thủ-công-mẫu)
+  - [Sơ đồ hệ thống E-messenger theo kiến trúc Monolith](#sơ-đồ-hệ-thống-e-messenger-theo-kiến-trúc-monolith)
+  - [Sơ đồ hệ thống Ecommerce theo kiến trúc microservice](#sơ-đồ-hệ-thống-ecommerce-theo-kiến-trúc-microservice)
 
 # Load balancer
 **Chức năng chính**: Phân phối lưu lượng truy cập 
